setup: Correct reference to package requirements for dev env

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,5 @@
 # Package requirements
--r ./requirements.txt
+-r requirements.txt
 
 # Additional requirements for package development
 pyprojroot==0.2.0
