--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - pip==20.0.2
   - jupyter==1.0.0
   - notebook==5.5.0
+  - ipython==7.13.0
   - jupyterlab==1.2.6
   - jupytext==1.4.2
   - pip: 
