azure_pipeline: Publish Linux package to Build Artifact staging directory

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,11 +44,12 @@ stages:
         pytest
       displayName: 'Run tests'
 
-- stage: Build
+- stage: Build and Publish
   # Condition to only run this job on a specified branch
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/azure_pipeline')
   # Specify that this job depends on another having already run
   dependsOn: Test
+
   jobs:
   - job: Linux
     pool:
@@ -60,8 +61,20 @@ stages:
     steps:
     - template: azure_templates/env_for_package.yml
     - script: |
-        python setup.py sdist bdist_wheel
+        python setup.py sdist
+      # Optional: could also create a wheel using bdist_wheel
       displayName: 'Build distributions'
+    - task: CopyFiles@2
+      inputs:
+        sourceFolder: 'dist'
+        targetFolder: '$(Build.ArtifactStagingDirectory)'
+      displayName: 'Copy package dist to:  $(Build.ArtifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        artifactName: 'linux_dist'
+        publishLocation: 'Container'
+      displayName: 'Publish package as artifact'
+
   - job: Windows
     pool:
       vmImage: 'vs2017-win2016'
@@ -72,5 +85,6 @@ stages:
     steps:
     - template: azure_templates/env_for_package.yml
     - script: |
-        python setup.py sdist bdist_wheel
+        python setup.py sdist
+      # Optional: could also create a wheel using bdist_wheel
       displayName: 'Build distributions'
