--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ wheel==0.34.2
 numpy==1.18.2
 pandas==0.25.3
 openpyxl==3.0.3
-# click==7.1.1
+click==7.1.1
 
 # Testing and continuous integration
 pytest==5.0.1
