row_cutoff: Amend to filter out unwanted row values. Run on Windows (*)
* Encountering error - see development notebook

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 env/
 venv/
 
+# Files created by tasks
+# Create when running tests in pytest
+test-output.xml
+
 # --------------
 # Created by https://www.gitignore.io/api/python,windows,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,windows,jupyternotebooks,visualstudiocode
