--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,11 +5,11 @@
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema
 
 # To select which branches to run *all* tasks on push to remote repo
-# (but the 'condition' for each stage / job / step still need to be met)
+# (but the 'condition' for each stage / job / step still needs to be met)
 trigger: none
 # - master
 # To select which branches to run *all* tasks creating a pull request
-# (but the 'condition' for each stage / job / step still need to be met)
+# (but the 'condition' for each stage / job / step still needs to be met)
 # pr:
 # - master
 
@@ -22,6 +22,8 @@ stages:
 - stage: Test
   jobs:
   - job: Linux
+    # Condition to only run this stage on a specified branch
+    condition: eq(variables['Build.SourceBranchName'], 'branch_name_here')
     pool:
       vmImage: 'ubuntu-latest'
     strategy:
@@ -31,7 +33,7 @@ stages:
     steps:
     - template: azure_templates/env_for_package.yml
     - script: |
-        pytest
+        pytest /tests
       displayName: 'Run tests'
   - job: Windows
     pool:
@@ -43,12 +45,12 @@ stages:
     steps:
     - template: azure_templates/env_for_package.yml
     - script: |
-        pytest
+        pytest /tests
       displayName: 'Run tests'
 
 - stage: Build_and_Publish
   # Condition to only run this stage on a specified branch
-  # condition: eq(variables['Build.SourceBranchName'], 'master')
+  condition: eq(variables['Build.SourceBranchName'], 'branch_name_here')
 
   # Specify that this job depends on another having already run
   dependsOn: Test
